--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
   "devDependencies": {
     "@contexts/chrome": "1.0.0",
     "@depack/render": "1.1.4",
-    "@idio/core": "1.3.5",
-    "@idio/router": "1.3.0",
-    "alamode": "1.8.6",
-    "documentary": "1.22.0",
+    "@idio/core": "1.4.0",
+    "@idio/router": "1.3.1",
+    "alamode": "2.2.0",
+    "documentary": "1.27.2",
     "eslint-config-artdeco": "1.0.1",
     "yarn-s": "1.1.0",
-    "zoroaster": "3.10.0"
+    "zoroaster": "4.1.1-alpha"
   }
 }
