--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "mask": "yarn t test/mask",
     "test-build": "ALAMODE_ENV=test-build yarn test",
     "lint": "eslint .",
-    "doc": "NODE_DEBUG=doc doc documentary -o README.md",
+    "doc": "NODE_DEBUG=doc doc -o README.md",
     "b": "alamode src -o build -s -i .eslintrc",
-    "depack": "depack-dev depack.js -c -o dist/exif.js -a --isolation_mode IIFE",
-    "d": "yarn-s d1",
-    "d1": "NODE_DEBUG=doc doc src/index.js -g",
+    "depack": "depack-dev depack.js -c -o dist/exif.js -a -i --externs types/externs.js",
+    "d": "yarn-s d1 externs",
+    "d1": "typal src/index.js -c",
+    "externs": "typal types/externs.js",
     "build": "yarn-s d b doc",
     "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
     "e": "node example",
@@ -23,7 +24,8 @@
   },
   "files": [
     "build",
-    "src"
+    "src",
+    "types/externs.js"
   ],
   "repository": {
     "type": "git",
